@@ -12,7 +12,7 @@ void
 testTortureExecute (void)
 {
 #if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_ds400) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16) && !defined(__SDCC_hc08) && !defined(__SDCC_s08)
-#if !defined(__SDCC_stm8) && !defined(__SDCC_z80) && !defined(__SDCC_z180) && !defined(__SDCC_gbz80) && !defined(__SDCC_tlcs90) && !defined(__SDCC_r2k) && !defined(__SDCC_r3ka)
+#if !defined(__SDCC_gbz80)
 
   unsigned long long xx;
   unsigned long long *x = (unsigned long long *) &xx;
